--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -1,10 +1,14 @@
 .countries{
+  position: relative;
+  z-index: 9;
+  margin-top: -30px;
   background-color: $basic-grey;
   padding-bottom: 34px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 
   @media (min-width: $medium-width) {
+    margin-top: -55px;
     padding-bottom: 80px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
@@ -20,18 +24,18 @@
 }
 
 .countries__container{
-  padding-top: 71px;
+  padding-top: 101px;
 
   @media (min-width:$medium-width) {
-    padding-top: 73px;
+    padding-top: 128px;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  @media (min-width:$medium-width) {
+  @media (min-width: $large-width) {
     position: relative;
-    padding-top: 161px;
+    padding-top: 246px;
   }
 }
 
