--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -1,13 +1,14 @@
 .profile{
+  margin-top: -30px;
   position: relative;
+  z-index: 6;
   background-color: #E6E8F1;
-  // padding-top: 37px;
   padding-bottom: 38px;
-  // padding-left: 24px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 
   @media (min-width: $medium-width) {
+    margin-top: -55px;
     padding-bottom: 63px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
@@ -84,14 +85,14 @@
 .profile__header{
   display: flex;
   justify-content: space-between;
-  padding-top: 53px;
+  padding-top: 83px;
 
   @media (min-width: $medium-width) {
-    padding-top: 74px;
+    padding-top: 109px;
   }
 
   @media (min-width: $large-width) {
-    padding-top: 107px;
+    padding-top: 132px;
   }
 }
 
