changed image path of background images

--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -140,7 +140,7 @@
   left: 0;
   top: 54px;
   border-radius: 20px;
-  background-image: url(../../img/back-medium.png);
+  background-image: url(/img/back-medium.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 113px;
@@ -163,7 +163,7 @@
   position: absolute;
   right: 25px;
   top: 55px;
-  background-image: url(../../img/smolov-back-desktop.png);
+  background-image: url(/img/smolov-back-desktop.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 143px;
@@ -183,7 +183,7 @@
 .users__background-image-3{
   position: absolute;
   top: 327px;
-  background-image: url(../../img/rogovaya-back-desktop.png);
+  background-image: url(/img/rogovaya-back-desktop.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 64px;
