--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -3,7 +3,7 @@
   position: relative;
   margin-top: -52px;
   padding-top: 124px;
-  background-image: url(../../img/about-mobile.png),url(../../img/back-medium.png);
+  background-image: url(/img/about-mobile.png),url(/img/back-medium.png);
   background-size: 100% 100%, 113px 132px;
   background-repeat: no-repeat;
   background-position: top 39px right, top 39px left;
@@ -14,7 +14,7 @@
   @media (min-width: $medium-width) {
     margin-top: 96px;
     padding-top: 41px;
-    background-image: url(../../img/about-tablet.png),url(../../img/back-medium.png);
+    background-image: url(/img/about-tablet.png),url(/img/back-medium.png);
     background-size: 376px 510px, 100% 212px;
     background-position: right top 45px, top left 40px;
     border-bottom-left-radius: 60px;
@@ -25,7 +25,7 @@
   @media (min-width: $large-width) {
     margin-top: 0;
     padding-top: 42px;
-    background-image: url(../../img/about-desctop.png),url(../../img/back-medium.png);
+    background-image: url(/img/about-desctop.png),url(/img/back-medium.png);
     background-size: 630px 735px, 212px 212px;
     background-position: right top, top left 40px;
   }
