--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -12,7 +12,7 @@
     padding-bottom: 80px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    background-image: url(../../img/flags-background.png);
+    background-image: url(/img/flags-background.png);
     background-repeat: no-repeat;
     background-size: auto;
     background-position: top 80px right 40px;
@@ -73,7 +73,7 @@
     margin-left: -35px;
     padding-top: 38px;
     padding-left: 35px;
-    background-image: url(../../img/background-light.png);
+    background-image: url(/img/background-light.png);
     background-repeat: no-repeat;
     background-size: 141px 141px;
     background-position: top left;
