--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -28,7 +28,7 @@
   z-index: 0;
   margin-top: -80px;
   padding-top: 126px;
-  background-image: url(../../img/rates-large.png);
+  background-image: url(/img/rates-large.png);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 100px 100px;
