--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,6 +1,7 @@
 .page-header{
   padding-bottom: 12px;
   position: relative;
+  z-index: 13;
   background-color: $basic-blue;
   margin-bottom: -70px;
   display: flex;
