--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -7,6 +7,7 @@
     display: inline-flex;
     align-items: center;
     user-select: none;
+    margin: 0;
   }
 
   &+label::before{
@@ -25,7 +26,6 @@
   }
 
   &:checked+label::before{
-    // fill="#161C35"
     background-image: url(../img/check.svg);
     fill: $basic-blue;
   }
@@ -53,4 +53,58 @@
 
 .checkbox__text{
   @include text(15px, normal, 20px, #000000);
+}
+
+.checkbox.checkbox--large+label::before{
+  // content: '';
+  // display: inline-block;
+  margin-right: 13px;
+  width: 26px;
+  height: 26px;
+
+  @media (min-width: $medium-width) {
+    margin-right: 22px;
+    width: 36px;
+    height: 36px;
+  }
+  // flex-shrink: 0;
+  // flex-grow: 0;
+  // background-color: #ffffff;
+  // border-radius: 4px;
+  // margin-right: 0.5em;
+  // background-repeat: no-repeat;
+  // background-position: center center;
+  // background-size: 50% 50%;
+}
+
+.checkbox.checkbox--border + label::before{
+  border: 1px solid #CBCED9;
+}
+
+.checkbox.checkbox--border:not(:disabled):not(:checked)+label:hover::before, label:hover{
+  opacity: 1;
+}
+
+.checkbox.checkbox--border:not(:disabled):not(:checked)+label:hover::before{
+  border: 1px solid #959BB2;
+}
+
+.checkbox.checkbox--border:not(:disabled):active+label::before{
+  background-color: #E2E5F1;
+  opacity: 0.3;
+}
+
+.checkbox.checkbox--border:focus+label::before {
+  background-color: #E2E5F1;
+  opacity: 0.3;
+}
+
+.checkbox.checkbox--border:focus:not(:checked)+label::before {
+  background-color: #E2E5F1;
+  opacity: 0.3;
+}
+
+.checkbox.checkbox--border:disabled+label::before {
+  background-color: #E2E5F1;
+  opacity: 0.3;
 }
