--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -218,10 +218,22 @@
       margin-right: 60px;
     }
   }
+
+  &:hover{
+    transform: scale(1.01, 1.01);
+    box-shadow: 0 4px 2px -2px gray;
+  }
 }
 
 .users__card{
   flex-direction: column;
+}
+
+.users__hashtags{
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
 
 .users__info{
@@ -559,6 +571,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &:hover{
+    color: $basic-blue-light;
+    opacity: 0.6;
+  }
+
+  &:active, &:focus{
+    color: $basic-blue-light;
+    opacity: 0.3;
+  }
 }
 
 .users__online-status-icon{
