--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -25,7 +25,7 @@
 
 .profile__list{
   position: relative;
-  z-index: 0;
+  z-index: auto;
   margin-top: -80px;
   padding-top: 126px;
   background-image: url(../img/rates-large.png);
