--- a/source/sass/global/reset-default-values.scss
+++ b/source/sass/global/reset-default-values.scss
@@ -19,3 +19,11 @@ p{
   margin-inline-end: 0;
   margin-bottom: 0;
 }
+
+ul{
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
+}
