--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -123,7 +123,7 @@
 }
 
 .choose-companion__transport {
-  &:not(last-child){
+  &:not(:last-child){
     margin-right: 2px;
   }
 }
@@ -223,18 +223,6 @@
   }
 }
 
-.choose-companion__range-icon{
-  position: absolute;
-  top: 0;
-  width: 16px;
-  height: 35px;
-  stroke: $special-dark-grey;
-
-  @media (min-width: $medium-width) {
-    height: 46px;
-  }
-}
-
 .choose-companion__transport-button{
   padding: 5px;
 
@@ -328,5 +316,49 @@
   @media (min-width: $medium-width) and (max-width: $medium-max-width) {
     margin-top: 0;
     margin-left: 18px;
+  }
+}
+
+.choose-companion__range-icon{
+  position: relative;
+  // top: 0;
+  // width: 16px;
+  // height: 35px;
+  // stroke: $special-dark-grey;
+
+  // @media (min-width: $medium-width) {
+  //   height: 46px;
+  // }
+}
+
+.choose-companion__vertical-line{
+  position: absolute;
+  width: 1px;
+  height: 13px;
+  background-color: $special-dark-grey;
+  top: -14px;
+
+  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
+    height: 15px;
+  }
+}
+
+.choose-companion__vertical-line--bottom{
+  top: auto;
+  bottom: -9px;
+}
+
+.choose-companion__horizontal-line{
+  position: absolute;
+  width: 16px;
+  height: 1px;
+  top: 4px;
+  left: -7px;
+  background-color: $special-dark-grey;
+
+  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
+    width: 21px;
+    top: 7px;
+    left: -9px;
   }
 }
