--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -47,6 +47,7 @@
 
   @media (min-width: $medium-width) {
     margin-top: 40px;
+    margin-left: 35px;
   }
 
   @media (min-width: $large-width) {
@@ -143,6 +144,7 @@
     margin-top: 60px;
     font-size: 28px;
     line-height: 30px;
+    margin-left: 41px;
   }
 }
 
