--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/icon-list.scss";
 @import "blocks/about.scss";
 @import "blocks/add-plans.scss";
+@import "blocks/business-tariffs.scss";
 @import "blocks/buttons-block.scss";
 @import "blocks/buttons-line.scss";
 @import "blocks/calendar.scss";
